# GuiCalculator

./: calculator.py  pyproject.toml  readme.md
